misaligned signup form button fixed in footer

--- a/less/plugins/plugin-ecommerce.less
+++ b/less/plugins/plugin-ecommerce.less
@@ -268,10 +268,13 @@
 }
 
 // Images
-.ecombasketsummary__summary-item-link {
-    background-image: none;
+.ecombasketsummary .summary-item-link {
+    background-image: none !important;
 }
 
+.ecombasketsummary .image {
+    max-width: 140px;
+}
 
 
 
