--- a/less/theme.less
+++ b/less/theme.less
@@ -46,6 +46,7 @@
 	}
 }
 
+
 // Footer
 // ------
 
@@ -119,6 +120,8 @@ blockquote:before {
 	font-size: 32px;
 	color: @color-swatch3;
 }
+
+
 
 
 // -----------------------------
@@ -199,6 +202,11 @@ label {
 // Select
 // ----------
 
+input, textarea, select {
+    -webkit-appearance: none;
+    -webkit-border-radius: 0;
+}
+
 select {
     height: 36px;
     outline: none;
@@ -250,6 +258,9 @@ textarea {
     min-height: 150px;
 }
 
+
+
+
 // -----------------------------
 // 4. #Buttons
 // -----------------------------
@@ -260,6 +271,9 @@ button, .button {
     border: 4px solid darken(@color-swatch3,4%);
     color: @font-swatch7-color;
 }
+
+
+
 
 // -----------------------------
 // 5. #Images
