--- a/less/widgets.less
+++ b/less/widgets.less
@@ -847,7 +847,8 @@ input.input[type=search],
     .button--submit {
         width: 40%;
         display: inline-block;
-        padding: 4px 4px 5px 4px;
+        padding: 0;
+        height: 41px;
     }  
     .signupform__form {
         padding: 10px 0 20px;
